After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667085 - [0.11] dcaparse: uses uninitialized variable
[0.11] dcaparse: uses uninitialized variable
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.11.x
Other All
: Normal normal
: 0.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-01 04:35 UTC by Matej Knopp
Modified: 2012-01-03 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (812 bytes, patch)
2012-01-01 04:35 UTC, Matej Knopp
committed Details | Review

Description Matej Knopp 2012-01-01 04:35:20 UTC
Created attachment 204405 [details] [review]
Fix

size is used instead of bufize
Comment 1 Tim-Philipp Müller 2012-01-03 14:44:45 UTC
commit 03408a475cb5b059702e2a1f702d47b54945f620
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Sat Dec 31 23:33:33 2011 -0500

    dcaparse: use right variable
    
    Fixes use of unitialized variable.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667085