dcaparse: use right variable

Fixes use of unitialized variable.

https://bugzilla.gnome.org/show_bug.cgi?id=667085